--- a/Main/src/Styles/Style.css
+++ b/Main/src/Styles/Style.css
@@ -222,29 +222,59 @@ footer {
 }
 
 /* RESPONSIVE */
+@media (max-width: 500px) {
+    h1 { font-size: 2rem; }
+    .btn-primary { padding: 10px 20px; }
+}
+
+/* SELLPHONE */
 @media (max-width: 900px) {
+  
+    .navbar a {
+        font-size: 0.9rem;
+    }
+
+    .navbar ul {
+        flex-direction: column-reverse;
+        gap: 4px;
+    }
+
+
+
     .hero,
     .visual {
         flex-direction: column;
         text-align: center;
     }
 
-    .hero-content {
+    .hero-content,
+    .visual-text {
         max-width: 100%;
+        text-align: center;
     }
 
+    
+    .hero-image {
+        max-width: 300px;
+        width: 90%;
+    }
+
+    
     .feature-container {
         flex-direction: column;
+        align-items: center;
+    }
+    
+    .how-container {
+        grid-template-columns: repeat(2, 1fr);
     }
 
-    .hero-image,
     .visual-img {
-        width: 100%;
+        width: 90%;
         max-width: 350px;
     }
-}
 
-@media (max-width: 500px) {
-    h1 { font-size: 2rem; }
-    .btn-primary { padding: 10px 20px; }
+    nav ul {
+        gap: 10px;
+    }
 }
