--- a/src/Styles/Style.css
+++ b/src/Styles/Style.css
@@ -230,6 +230,10 @@ footer {
 /* SELLPHONE */
 @media (max-width: 900px) {
   
+    .navbar{
+        height: 90%;
+    }
+    
     .navbar a {
         font-size: 0.9rem;
     }
